--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "8. [Forecast future demand](#forecast)\n",
     "\n",
-    "9. [Final thoughts](#summary)"
+    "9. [Final thoughts](#final_thoughts)"
    ]
   },
   {
